--- a/CookieCrush/View/Base.lproj/Main.storyboard
+++ b/CookieCrush/View/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GLN-X2-pFX">
-                                <rect key="frame" x="0.0" y="128" width="414" height="608"/>
+                                <rect key="frame" x="0.0" y="134" width="414" height="602"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="10" id="Dg8-la-GOG">
@@ -50,8 +50,14 @@
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <searchBar contentMode="redraw" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Tbo-5m-aHG">
+                                <rect key="frame" x="7" y="61" width="337" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S1F-Sg-mlw">
-                                <rect key="frame" x="20" y="67" width="50" height="50"/>
+                                <rect key="frame" x="351" y="63" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="AscendingSort:" destination="kuw-YT-A3e" eventType="touchUpInside" id="f64-H7-GbP"/>
@@ -63,6 +69,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="GLN-X2-pFX" id="eT4-SG-gwA"/>
+                        <outlet property="searchBar" destination="Tbo-5m-aHG" id="3XU-pQ-lOi"/>
                         <outlet property="sortDownButton" destination="S1F-Sg-mlw" id="CsR-49-cR3"/>
                     </connections>
                 </viewController>
